card text overflow fixed

--- a/Student_hub/Second.css
+++ b/Student_hub/Second.css
@@ -46,7 +46,7 @@ section {
 
 
 .student-name {
-    width: 300px;
+    width: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
